--- a/play-with-angular/projects/shop-it/src/app/app.component.html
+++ b/play-with-angular/projects/shop-it/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="display-1">{{title}}</div>
   <hr />
   <div class="list-group">
-    <div class="list-group-item">
+    <div class="list-group-item" *ngFor="let product of products">
       <div class="row">
         <div class="col-4">
           <img class="img-fluid" alt="product-image" [src]="product.imagePath" />
@@ -10,8 +10,23 @@
         <div class="col-8">
           <div>{{product.name}}</div>
           <div>{{product.price}}</div>
-          <div>{{product.description}}</div>
           <button (click)="handleBuy($event)" class="btn btn-primary">buy</button>
+          <ul class="nav nav-tabs">
+            <li class="nav-item">
+              <a [ngClass]="{'nav-link':true,active:isTabSelected(1)}" (click)="handleTabChange(1)"
+                href="#">Description</a>
+            </li>
+            <li class="nav-item">
+              <a [ngClass]="{'nav-link':true,active:isTabSelected(2)}" (click)="handleTabChange(2)"
+                href="#">Specification</a>
+            </li>
+            <li class="nav-item">
+              <a [ngClass]="{'nav-link':true,active:isTabSelected(3)}" (click)="handleTabChange(3)" href="#">Reviews</a>
+            </li>
+          </ul>
+          <div *ngIf="isTabSelected(1)">{{product.description}}</div>
+          <div *ngIf="isTabSelected(2)">Not Yet</div>
+          <div *ngIf="isTabSelected(3)">None Yet</div>
         </div>
       </div>
     </div>
