--- a/play-with-angular/projects/shop-it/src/app/app.component.html
+++ b/play-with-angular/projects/shop-it/src/app/app.component.html
@@ -1,34 +1,9 @@
 <div class="container">
-  <div class="display-1">{{title}}</div>
-  <hr />
-  <div class="list-group">
-    <div class="list-group-item" *ngFor="let product of products">
-      <div class="row">
-        <div class="col-4">
-          <img class="img-fluid" alt="product-image" [src]="product.imagePath" />
-        </div>
-        <div class="col-8">
-          <div>{{product.name}}</div>
-          <div>{{product.price}}</div>
-          <button (click)="handleBuy($event)" class="btn btn-primary">buy</button>
-          <ul class="nav nav-tabs">
-            <li class="nav-item">
-              <a [ngClass]="{'nav-link':true,active:isTabSelected(1)}" (click)="handleTabChange(1)"
-                href="#">Description</a>
-            </li>
-            <li class="nav-item">
-              <a [ngClass]="{'nav-link':true,active:isTabSelected(2)}" (click)="handleTabChange(2)"
-                href="#">Specification</a>
-            </li>
-            <li class="nav-item">
-              <a [ngClass]="{'nav-link':true,active:isTabSelected(3)}" (click)="handleTabChange(3)" href="#">Reviews</a>
-            </li>
-          </ul>
-          <div *ngIf="isTabSelected(1)">{{product.description}}</div>
-          <div *ngIf="isTabSelected(2)">Not Yet</div>
-          <div *ngIf="isTabSelected(3)">None Yet</div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <app-navbar [title]="title"></app-navbar>
+  <app-cart-badge [cart]="cart"></app-cart-badge>
+  <button class="btn btn-sm btn-danger" (click)="toggleCartView()">toggle-cart</button>
+  <br />
+  <app-cart-view *ngIf="isCartOpen" [cart]="cart"></app-cart-view>
+  <br />
+  <app-product-list (buy)="addToCart($event)"></app-product-list>
 </div>
