--- a/play-with-angular/projects/shop-it/src/app/navbar/navbar.component.html
+++ b/play-with-angular/projects/shop-it/src/app/navbar/navbar.component.html
@@ -1,3 +1,7 @@
-<hr />
-<div class="display-1">{{title}}</div>
+<nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand">{{title}}</a>
+        <app-cart-badge></app-cart-badge>
+    </div>
+</nav>
 <hr />
