--- a/play-with-angular/projects/shop-it/src/app/product-list/product-list.component.html
+++ b/play-with-angular/projects/shop-it/src/app/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <div class="list-group">
-    <div class="list-group-item" *ngFor="let product of products">
-        <app-product [value]="product" (buy)="handleBuy($event)"></app-product>
+    <div class="list-group-item" *ngFor="let product of products | slice:0:10">
+        <app-product [value]="product"></app-product>
     </div>
 </div>
