--- a/play-with-angular/projects/shop-it/src/app/app.component.html
+++ b/play-with-angular/projects/shop-it/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="container">
   <app-navbar [title]="title"></app-navbar>
-  <button class="btn btn-sm btn-danger" (click)="toggleCartView()">toggle-cart</button>
+  <button class="btn btn-sm btn-danger" (click)="toggleCartView()">
+    {{isCartOpen?'products':'cart'}}
+  </button>
   <br />
   <app-cart-view *ngIf="isCartOpen"></app-cart-view>
   <br />
-  <app-product-list></app-product-list>
+  <app-product-list *ngIf="!isCartOpen"></app-product-list>
 </div>
