--- a/play-with-angular/projects/shop-it/src/app/review-form/review-form.component.html
+++ b/play-with-angular/projects/shop-it/src/app/review-form/review-form.component.html
@@ -1,4 +1,5 @@
-<div class="card">
+<button *ngIf="!isOpen" (click)="handleFormOpen()"><i class="fa fa-plus"></i></button>
+<div class="card" *ngIf="isOpen">
     <div class="card-header">Review Form</div>
     <div class="card-body">
         <form [formGroup]="reviewForm" (submit)="handleSubmit($event)">
@@ -20,6 +21,7 @@
             </div>
             <hr />
             <button>Submit</button>
+            <button type="button" (click)="handleFormOpen()">Cancel</button>
             <hr />
         </form>
     </div>
