--- a/play-with-angular/projects/shop-it/src/app/navbar/navbar.component.html
+++ b/play-with-angular/projects/shop-it/src/app/navbar/navbar.component.html
@@ -1,7 +1,22 @@
-<nav class="navbar bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand">{{title}}</a>
-        <app-cart-badge></app-cart-badge>
+        <a class="navbar-brand" href="#">{{title}}</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link" [routerLink]="['/products']">Products</a>
+                <a class="nav-link" [routerLink]="['/orders']">Orders</a>
+
+                <a class="nav-link" [routerLink]="['/cart']">
+                    <app-cart-badge></app-cart-badge>
+                </a>
+
+            </div>
+            &nbsp;&nbsp;
+        </div>
     </div>
 </nav>
-<hr />
