--- a/play-with-angular/projects/shop-it/src/app/product/product.component.html
+++ b/play-with-angular/projects/shop-it/src/app/product/product.component.html
@@ -9,15 +9,15 @@
         <button (click)="handleBuy($event)" class="btn btn-primary">buy</button>
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a [ngClass]="{'nav-link':true,active:isTabSelected(1)}" (click)="handleTabChange(1)"
+                <a [ngClass]="{'nav-link':true,active:isTabSelected(1)}" (click)="handleTabChange(1,$event)"
                     href="#">Description</a>
             </li>
             <li class="nav-item">
-                <a [ngClass]="{'nav-link':true,active:isTabSelected(2)}" (click)="handleTabChange(2)"
+                <a [ngClass]="{'nav-link':true,active:isTabSelected(2)}" (click)="handleTabChange(2,$event)"
                     href="#">Specification</a>
             </li>
             <li class="nav-item">
-                <a [ngClass]="{'nav-link':true,active:isTabSelected(3)}" (click)="handleTabChange(3)"
+                <a [ngClass]="{'nav-link':true,active:isTabSelected(3)}" (click)="handleTabChange(3,$event)"
                     href="#">Reviews</a>
             </li>
         </ul>
