--- a/play-with-angular/projects/shop-it/src/app/navbar/navbar.component.html
+++ b/play-with-angular/projects/shop-it/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
-                <a class="nav-link" [routerLink]="['/products']">Products</a>
+                <a class="nav-link" [routerLink]="['/products']" routerLinkActive="active">Products</a>
                 <a class="nav-link" [routerLink]="['/orders']">Orders</a>
 
                 <a class="nav-link" [routerLink]="['/cart']">
